Fixing overflowing inputs

--- a/client/src/css/utility/home.css
+++ b/client/src/css/utility/home.css
@@ -96,7 +96,7 @@ html, body{
     padding: 0.5rem;
     border-radius: 0.2rem;
      max-height: 2rem;
-    width: 100%;
+     min-width: 88%;
     text-align: center;
     border-radius: 0;
     font-size: 1.3em;
@@ -126,7 +126,7 @@ html, body{
     max-height: 2rem;
     text-align: center;
     border-radius: 0;
-    width: 100%;
+    min-width: 88%;
     font-size: 1.3em;
     font-weight: 400;
     background: hsla(215, 20%, 98%, 1);
